added beam search as script

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,8 @@
     "from torch.nn.utils.rnn import pad_packed_sequence, pack_padded_sequence, pad_sequence, PackedSequence\n",
     "from models.networks import GlobalContextualDeepTransition\n",
     "from pytorch_lightning.callbacks import ModelCheckpoint\n",
-    "from torch.utils.data import DataLoader "
+    "from torch.utils.data import DataLoader \n",
+    "import pickle"
    ]
   },
   {
@@ -65,17 +66,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with torch.no_grad():\n",
-    "    words, chars, charMask, targets = batch = next(iter(loader))\n",
-    "    encoded, initHiddenState, initPrevTarget = model.encode(words, chars, charMask)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -100,157 +90,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def beamSearch(batch):\n",
+    "    with torch.no_grad():\n",
+    "        words, chars, charMask, targets = batch\n",
+    "        encoded, initHiddenState, initPrevTarget = model.encode(words, chars, charMask)\n",
+    "\n",
+    "    batchSize = words.batch_sizes[0].item() # batchSize\n",
+    "    beamSize  = 4 # beamsize\n",
+    "    units = model.sequenceLabeller.decoderUnits\n",
+    "    tags = model.numTags\n",
+    "\n",
+    "#     print(f\"batchSize={batchSize}, beamSize={beamSize}, units={units}, tags={tags}\")\n",
+    "\n",
+    "    lengths = torch.zeros(batchSize, dtype=torch.int)\n",
+    "\n",
+    "    for x in words.batch_sizes:\n",
+    "        lengths[:x] += 1\n",
+    "\n",
+    "    \"\"\"\n",
+    "        values[i, j] contains the heuristic beam of the ith example. j in range(beamSize)\n",
+    "        paths [i, j] contains the corresponding paths\n",
+    "    \"\"\"\n",
+    "    values = torch.zeros(batchSize, beamSize) # we maintain a queue like tensor, each example has a queue of size beamSize\n",
+    "    paths  = [ [list() for _ in range(beamSize)] for _ in range(batchSize) ] # one node in each queue as root of tree\n",
+    "    \"\"\"Init nodes in a matrix for each beam and \"\"\"\n",
+    "\n",
+    "    # encoded pages\n",
+    "    start = 0\n",
+    "    encodedPages = []\n",
+    "    for pageLen in words.batch_sizes:\n",
+    "        if start == 0:\n",
+    "            page = encoded[start:start+pageLen] # first page is not repeated\n",
+    "        else:\n",
+    "            page = encoded[start:start+pageLen].repeat(beamSize, 1)\n",
+    "        encodedPages.append(page) # [e1, e2, e3, e1, e2, e3.. etc, repeated beamSize times]\n",
+    "        start += pageLen\n",
+    "\n",
+    "    live = list(range(batchSize))\n",
+    "    dead = []\n",
+    "\n",
+    "    # initial values are not repeated\n",
+    "    hiddenState = initHiddenState\n",
+    "    prevTarget = initPrevTarget\n",
+    "\n",
+    "\n",
+    "    for t, b in enumerate(words.batch_sizes):\n",
+    "        \"\"\"Get the previous target and make the forward pass\"\"\"\n",
+    "        if len(live) != b.item():\n",
+    "            print(\"kekw\")\n",
+    "\n",
+    "        prevTarget += getSignal(1, units, t, model.device)\n",
+    "        with torch.no_grad():\n",
+    "            hiddenState, logits = model.sequenceLabeller.decode_once(\n",
+    "                encodedPages[t],\n",
+    "                prevTarget,\n",
+    "                hiddenState\n",
+    "            )\n",
+    "        logProbs = logitsToLogProbs(logits) # [b*beamSize, units] ie [l1, l2, l3, l1, l2, l3 ... numTag d vectors repeated]\n",
+    "\n",
+    "        \"\"\"Add the logProbs to the current paths to get newPathSums\"\"\"\n",
+    "        if t == 0:\n",
+    "            ps = logProbs\n",
+    "        else:\n",
+    "            logProbs = logProbs.reshape((-1, b, tags)) # now becomes [[l1, l2, l3], [l1, l2, l3], [l1, l2, l3]...]\n",
+    "            logProbs = torch.cat(list(logProbs), dim=-1) # [l1l1l1..., l2l2l2..., l3l3l3...]\n",
+    "            ps = pathSum(values[:b], logProbs)\n",
+    "\n",
+    "        \"\"\"Filter the top beam pathsums and extend the paths\"\"\"\n",
+    "        values[:b], indices = ps.topk(dim=-1, k=beamSize) # values is [batch, beam]\n",
+    "\n",
+    "        parents = indices // tags\n",
+    "        children = indices % tags\n",
+    "\n",
+    "        \"\"\"Extend paths using new values\"\"\"\n",
+    "        numFinished = 0\n",
+    "        for qidx, valBeam, childbeam, parentBeam in zip(live, values, children, parents):\n",
+    "            \"\"\"\n",
+    "                Narrow our sight to each example:\n",
+    "                    At qidx, extend the path of parentBeam[i] with childBeam[i]\n",
+    "                    You will get beam no. of new paths.\n",
+    "                    This is your new path beam.\n",
+    "            \"\"\"\n",
+    "            newQueue = []\n",
+    "            for v, c, p in zip(valBeam, childbeam, parentBeam):\n",
+    "                oldPath = paths[qidx][p]\n",
+    "                newPath = oldPath + [c.item()]\n",
+    "                newQueue.append(newPath)\n",
+    "            paths[qidx] = newQueue\n",
+    "\n",
+    "            \"\"\"Mark completed if the lenghts of the paths match the word count\"\"\"\n",
+    "            if len(newQueue[0]) == lengths[qidx]:\n",
+    "                numFinished += 1\n",
+    "                dead.append(qidx)\n",
+    "\n",
+    "        # remove dead sequences\n",
+    "        live = live[:b-numFinished]\n",
+    "        children = children[:b-numFinished]\n",
+    "        parents = parents[:b-numFinished]\n",
+    "        prevTarget = model.sequenceLabeller.targetEmbedding(children.T.reshape(-1))\n",
+    "        hiddenState = hiddenState.reshape((-1, b, units))\n",
+    "        unfolded = parents.T.reshape(-1)\n",
+    "        runner = torch.arange(b-numFinished).repeat(beamSize)\n",
+    "        hiddenState = hiddenState[unfolded, runner]\n",
+    "        \n",
+    "    # decode results\n",
+    "    results = [x[0] for x in paths]\n",
+    "    unsorted = [results[i] for i in words.unsorted_indices]\n",
+    "    return unsorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f6e6f9a078142fca7b5000901e7d171",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=46.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "batchSize=47, beamSize=4, units=256, tags=17\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "batchSize = words.batch_sizes[0].item() # batchSize\n",
-    "beamSize  = 4 # beamsize\n",
-    "units = model.sequenceLabeller.decoderUnits\n",
-    "tags = model.numTags\n",
-    "\n",
-    "print(f\"batchSize={batchSize}, beamSize={beamSize}, units={units}, tags={tags}\")\n",
-    "\n",
-    "lengths = torch.zeros(batchSize, dtype=torch.int)\n",
-    "\n",
-    "for x in words.batch_sizes:\n",
-    "    lengths[:x] += 1\n",
-    "\n",
-    "\"\"\"\n",
-    "    values[i, j] contains the heuristic beam of the ith example. j in range(beamSize)\n",
-    "    paths [i, j] contains the corresponding paths\n",
-    "\"\"\"\n",
-    "values = torch.zeros(batchSize, beamSize) # we maintain a queue like tensor, each example has a queue of size beamSize\n",
-    "paths  = [ [list() for _ in range(beamSize)] for _ in range(batchSize) ] # one node in each queue as root of tree\n",
-    "\"\"\"Init nodes in a matrix for each beam and \"\"\"\n",
-    "\n",
-    "# encoded pages\n",
-    "start = 0\n",
-    "encodedPages = []\n",
-    "for pageLen in words.batch_sizes:\n",
-    "    if start == 0:\n",
-    "        page = encoded[start:start+pageLen] # first page is not repeated\n",
-    "    else:\n",
-    "        page = encoded[start:start+pageLen].repeat(beamSize, 1)\n",
-    "    encodedPages.append(page) # [e1, e2, e3, e1, e2, e3.. etc, repeated beamSize times]\n",
-    "    start += pageLen\n",
-    "\n",
-    "live = list(range(batchSize))\n",
-    "dead = []\n",
-    "\n",
-    "# initial values are not repeated\n",
-    "hiddenState = initHiddenState\n",
-    "prevTarget = initPrevTarget\n",
-    "\n",
-    "\n",
-    "for t, b in enumerate(words.batch_sizes):\n",
-    "    \"\"\"Get the previous target and make the forward pass\"\"\"\n",
-    "    if t == 0:\n",
-    "        actualSize = b\n",
-    "    else:\n",
-    "        actualSize = b * beamSize\n",
-    "    prevTarget = prevTarget[:actualSize] + getSignal(1, units, t, model.device)\n",
-    "    with torch.no_grad():\n",
-    "        hiddenState, logits = model.sequenceLabeller.decode_once(\n",
-    "            encodedPages[t],\n",
-    "            prevTarget,\n",
-    "            hiddenState\n",
-    "        )\n",
-    "    logProbs = logitsToLogProbs(logits) # [b*beamSize, units] ie [l1, l2, l3, l1, l2, l3 ... numTag d vectors repeated]\n",
-    "\n",
-    "    \"\"\"Add the logProbs to the current paths to get newPathSums\"\"\"\n",
-    "    if t == 0:\n",
-    "        ps = logProbs\n",
-    "    else:\n",
-    "        logProbs = logProbs.reshape((beamSize, b, tags)) # now becomes [[l1, l2, l3], [l1, l2, l3], [l1, l2, l3]...]\n",
-    "        logProbs = torch.cat(list(logProbs), dim=-1) # [l1l1l1..., l2l2l2..., l3l3l3...]\n",
-    "        ps = pathSum(values[:b], logProbs)\n",
-    "\n",
-    "    \"\"\"Filter the top beam pathsums and extend the paths\"\"\"\n",
-    "    values[:b], indices = ps.topk(dim=-1, k=beamSize) # values is [batch, beam]\n",
-    "\n",
-    "    # indices represent max over arrays of size units * beam\n",
-    "    # Their parent must be at idx/units in the queue.\n",
-    "    parents = indices // tags\n",
-    "\n",
-    "    # the child is the actual index\n",
-    "    children = indices % tags\n",
-    "\n",
-    "    \"\"\"Extend paths using new values\"\"\"\n",
-    "    numFinished = 0\n",
-    "    for qidx, valBeam, childbeam, parentBeam in zip(live, values, children, parents):\n",
-    "        \"\"\"\n",
-    "            Narrow our sight to each example:\n",
-    "                At qidx, extend the path of parentBeam[i] with childBeam[i]\n",
-    "                You will get beam no. of new paths.\n",
-    "                This is your new path beam.\n",
-    "        \"\"\"\n",
-    "        newQueue = []\n",
-    "        for v, c, p in zip(valBeam, childbeam, parentBeam):\n",
-    "            oldPath = paths[qidx][p]\n",
-    "            newPath = oldPath + [c.item()]\n",
-    "            newQueue.append(newPath)\n",
-    "        paths[qidx] = newQueue\n",
-    "\n",
-    "        \"\"\"Mark completed if the lenghts of the paths match the word count\"\"\"\n",
-    "        if len(newQueue[0]) == lengths[qidx]:\n",
-    "            numFinished += 1\n",
-    "            dead.append(qidx)\n",
-    "    \n",
-    "#     print(*paths, sep='\\n')\n",
-    "    \"\"\"If an example is done, it has to be at the end of the live array\"\"\"\n",
-    "    for _ in range(numFinished):\n",
-    "        live.pop()\n",
-    "\n",
-    "    \"\"\"\n",
-    "        Rearrange the prevTarget and hiddenState using indices\n",
-    "        Note that values = torch.gather(ps, -1, indices) is a way to go from [batch, units*beam] and [batch, beam]\n",
-    "\n",
-    "        * ps -> [batch, units*beam] and values -> [batch, beam]\n",
-    "        use the same flow as logProbs -> ps -> values \n",
-    "    \"\"\"\n",
-    "    # remove dead sequences\n",
-    "    children = children[:b-numFinished]\n",
-    "    parents = parents[:b-numFinished]\n",
-    "    prevTarget = model.sequenceLabeller.targetEmbedding(children.T.reshape(-1))\n",
-    "    \n",
-    "    if t == 0:\n",
-    "        hiddenState = torch.unsqueeze(hiddenState, 0)\n",
-    "    else:\n",
-    "        hiddenState = hiddenState.reshape((beamSize, b, -1))\n",
-    "    unfolded = parents.T.reshape(-1)\n",
-    "    runner = torch.arange(b-numFinished).repeat(beamSize)\n",
-    "    hiddenState = hiddenState[unfolded, runner]\n",
-    "\n",
-    "#     print(\"Hidden State shape\", hiddenState.shape)\n",
-    "#     print(\"prevTarget shape\", prevTarget.shape)\n",
-    "# print(*[page.shape for page in encodedPages], sep='\\n')"
+    "preds = []\n",
+    "for batch in tqdm(loader):\n",
+    "    preds.extend(beamSearch(batch))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# decode results\n",
-    "results = [x[0] for x in paths]\n",
-    "unsorted = []\n",
-    "for i in words.unsorted_indices:\n",
-    "    unsorted.append([data.tags[j] for j in results[i]] )"
+    "with open('predsnotebook.pkl', 'wb') as file:\n",
+    "    pickle.dump(preds, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
