added conlleval script

--- a/testBeamSearch.ipynb
+++ b/testBeamSearch.ipynb
@@ -28,8 +28,10 @@
     "targetName = 'data/conll03/eng.train.trg'\n",
     "gloveFile = 'data/conll03/trimmed.300d.Cased.txt'\n",
     "symbFile = 'data/conll03/sym.glove'\n",
-    "testSrc = 'data/conll03/eng.testb.src'\n",
-    "testTrg = 'data/conll03/eng.testb.trg'\n",
+    "testSrc = 'data/conll03/eng.testa.src'\n",
+    "testTrg = 'data/conll03/eng.testa.trg'\n",
+    "predFile = 'predsa.trg'\n",
+    "result = 'resulta.txt'\n",
     "\n",
     "data = NERDataset(sourceName, targetName, gloveFile, symbFile)\n",
     "data.readTestFile(testSrc, testTrg)\n",
@@ -42,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prevCheckpointPath = 'lightning_logs/ckpt-epoch=109-train_loss=0.63.ckpt'\n",
+    "prevCheckpointPath = 'lightning_logs/rasputin_kekw.ckpt'\n",
     "\n",
     "with open('config.json', 'r') as file:\n",
     "    kwargs = json.load(file)\n",
@@ -68,12 +70,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daf7bce69aae40738a88223d6c9d26aa",
+       "model_id": "238324b016474dc89bf5dd9be0e2c583",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=12.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=13.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -101,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tester.writePreds(out, data.tags, 'predsb.trg', testSrc)"
+    "tester.writePreds(out, data.tags, predFile, testSrc)"
    ]
   },
   {
@@ -127,12 +129,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "46666 46666\n"
+      "51578 51578\n"
      ]
     }
    ],
    "source": [
-    "print(countWords('predsb.trg'), countWords(testSrc))"
+    "print(countWords(predFile), countWords(testSrc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions with bad length: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "tester.getResultFile(testSrc, predFile, testTrg, result)"
    ]
   }
  ],
