added test script

--- a/testBeamSearch.ipynb
+++ b/testBeamSearch.ipynb
@@ -9,6 +9,7 @@
     "import json\n",
     "import torch\n",
     "import pickle\n",
+    "import os\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +31,7 @@
     "symbFile = 'data/conll03/sym.glove'\n",
     "testSrc = 'data/conll03/eng.testa.src'\n",
     "testTrg = 'data/conll03/eng.testa.trg'\n",
-    "predFile = 'predsa.trg'\n",
-    "result = 'resulta.txt'\n",
+    "predFile = 'preds/' + os.path.basename(testTrg) + '.out'\n",
     "\n",
     "data = NERDataset(sourceName, targetName, gloveFile, symbFile)\n",
     "data.readTestFile(testSrc, testTrg)\n",
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prevCheckpointPath = 'lightning_logs/rasputin_kekw.ckpt'\n",
+    "prevCheckpointPath = 'lightning_logs/rasputin_217.ckpt'\n",
     "\n",
     "with open('config.json', 'r') as file:\n",
     "    kwargs = json.load(file)\n",
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "238324b016474dc89bf5dd9be0e2c583",
+       "model_id": "0aeb361f071a4e0f8235d3a03f4ae18b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -139,20 +139,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Saving file at  results/rasputin_217.ckpt.eng.testa.trg.out\n",
       "Predictions with bad length: 0\n"
      ]
     }
    ],
    "source": [
+    "result = 'results/'+ os.path.basename(prevCheckpointPath) + '.' + os.path.basename(predFile)\n",
+    "print('Saving file at ', result)\n",
     "tester.getResultFile(testSrc, predFile, testTrg, result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
