added train notebook from colab

--- a/train.ipynb
+++ b/train.ipynb
@@ -6,11 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import json\n",
     "from data.dataset import NERDataset\n",
     "from models.networks import GlobalContextualDeepTransition\n",
     "import pytorch_lightning as pl\n",
-    "from pytorch_lightning.callbacks import ModelCheckpoint"
+    "from pytorch_lightning.callbacks import ModelCheckpoint, Callback"
    ]
   },
   {
@@ -19,10 +20,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sourceName = 'data/conll03/eng.train.src'\n",
-    "targetName = 'data/conll03/eng.train.trg'\n",
-    "gloveFile = 'data/conll03/trimmed.300d.Cased.txt'\n",
-    "symbFile = 'data/conll03/sym.glove'\n",
+    "base = 'data/conll03'\n",
+    "sourceName = f'{base}/eng.train.src'\n",
+    "targetName = f'{base}/eng.train.trg'\n",
+    "gloveFile = f'{base}/trimmed.300d.Cased.txt'\n",
+    "symbFile = f'{base}/sym.glove'\n",
+    "prevCheckpoint = 'lightning_logs/version_7/epoch=502-step=24938.ckpt'\n",
     "data = NERDataset(sourceName, targetName, gloveFile, symbFile)\n",
     "loader = data.getLoader(4096)"
    ]
@@ -31,46 +34,61 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Init model params = {\n",
+      "    \"numChars\": 100,\n",
+      "    \"charEmbedding\": 128,\n",
+      "    \"numWords\": 21388,\n",
+      "    \"wordEmbedding\": 300,\n",
+      "    \"contextOutputUnits\": 128,\n",
+      "    \"contextTransitionNumber\": 4,\n",
+      "    \"encoderUnits\": 256,\n",
+      "    \"decoderUnits\": 256,\n",
+      "    \"transitionNumber\": 4,\n",
+      "    \"numTags\": 17\n",
+      "}\n",
+      "Trainable parameters: 7,313,341\n"
+     ]
+    }
+   ],
    "source": [
     "with open('config.json', 'r') as file:\n",
     "    kwargs = json.load(file)\n",
-    "model = GlobalContextualDeepTransition(**kwargs)"
+    "print(\"Init model params =\", json.dumps(kwargs, indent=4))\n",
+    "model = GlobalContextualDeepTransition(**kwargs)\n",
+    "model.init_weights(data.embeddingWeights)\n",
+    "\n",
+    "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(f\"Trainable parameters: {numParams:,}\") # 7,313,34"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trainable parameters: 7,313,341\n"
-     ]
-    }
-   ],
-   "source": [
-    "# add glove weights here\n",
-    "model.init_weights(data.embeddingWeights)\n",
-    "\n",
-    "numParams = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "print(f\"Trainable parameters: {numParams:,}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt = ModelCheckpoint(filepath='lightning_logs/checkpoint', period=1)"
+    "class SaveEachEpoch(Callback):\n",
+    "    def __init__(self, dirpath, filename, period):\n",
+    "        super().__init__()\n",
+    "        self.dirpath = dirpath\n",
+    "        self.filename = filename\n",
+    "        self.period = period\n",
+    "        \n",
+    "    def on_epoch_end(self, trainer, pl_module):\n",
+    "        if trainer.current_epoch % self.period == 0:\n",
+    "            path = os.path.join(self.dirpath, self.filename).format(epoch=trainer.current_epoch)\n",
+    "            print(\"Saving at\", path)\n",
+    "            trainer.save_checkpoint(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a74ee88a4fdb468b9378347096bae9b3",
+       "model_id": "a03a1948a2ea474ca1aa774f4ac9df60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -100,39 +118,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\deepak h r\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\pytorch_lightning\\utilities\\distributed.py:45: UserWarning: Detected KeyboardInterrupt, attempting graceful shutdown...\n",
-      "  warnings.warn(*args, **kwargs)\n",
-      "c:\\users\\deepak h r\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:200: UserWarning: Please also save or load the state of the optimzer when saving or loading the scheduler.\n",
-      "  warnings.warn(SAVE_STATE_WARNING, UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer = pl.Trainer(#resume_from_checkpoint='lightning_logs/checkpoint-v0.ckpt',\n",
-    "                    gradient_clip_val=5., gpus=1,\n",
-    "                     max_epochs=2, checkpoint_callback=ckpt)\n",
+    "ckpt = SaveEachEpoch(\n",
+    "    dirpath='lightning_logs/backup/',\n",
+    "    filename='ckpt-{epoch:02d}',\n",
+    "    period=5\n",
+    ")\n",
+    "\n",
+    "trainer = pl.Trainer(resume_from_checkpoint=prevCheckpoint, callbacks=[ckpt],\n",
+    "                        gradient_clip_val=5., gpus=1, max_epochs=2000, default_root_dir=base)\n",
     "trainer.fit(model, loader)"
    ]
   },
